methods.returning.MethodsReturning.scala.error
Erreur de compilation :
MethodsReturning:1: error: type mismatch;
 found   : Unit
 required: Boolean
def haveBaggle():Boolean = {
                           ^MethodsReturning:16: error: type mismatch;
 found   : Unit
 required: Boolean
  avance()
        ^