methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {
}





def vuBiscuit():Boolean ={
  var biscuit=false
  for(i<-0 to 6){
    if (estSurBiscuit()){
      biscuit=true
    }
    avance()
  }
  avance()
}